NEW217499
REGRESSION (r267763): SHOULD NEVER BE REACHED in WebKit::contentRuleListsFromIdentifier
https://bugs.webkit.org/show_bug.cgi?id=217499
Summary REGRESSION (r267763): SHOULD NEVER BE REACHED in WebKit::contentRuleListsFrom...
Ryan Haddad
Reported 2020-10-08 17:20:46 PDT
Seeing the assertion failure below on debug WK2 bots with layout test http/wpt/service-workers/third-party-cookie.html https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fservice-workers%2Fthird-party-cookie.html SHOULD NEVER BE REACHED /Volumes/Data/slave/catalina-debug/build/Source/WebKit/UIProcess/WebProcessProxy.cpp(1808) : Vector<std::pair<String, WebCompiledContentRuleListData> > WebKit::contentRuleListsFromIdentifier(const Optional<WebKit::UserContentControllerIdentifier> &) 1 0x10b50a479 WTFCrash 2 0x11647850b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x11743b853 WebKit::contentRuleListsFromIdentifier(WTF::Optional<WTF::ObjectIdentifier<WebKit::UserContentControllerIdentifierType> > const&) 4 0x1174223dd WebKit::WebProcessProxy::enableServiceWorkers(WTF::Optional<WTF::ObjectIdentifier<WebKit::UserContentControllerIdentifierType> > const&) 5 0x117422511 WebKit::WebProcessProxy::createForServiceWorkers(WebKit::WebProcessPool&, WebCore::RegistrableDomain&&, WebKit::WebsiteDataStore&) 6 0x117421ec4 WebKit::WebProcessPool::establishWorkerContextConnectionToNetworkProcess(WebKit::NetworkProcessProxy&, WebCore::RegistrableDomain&&, PAL::SessionID, WTF::CompletionHandler<void ()>&&) 7 0x1176f48a5 WebKit::NetworkProcessProxy::establishWorkerContextConnectionToNetworkProcess(WebCore::RegistrableDomain&&, PAL::SessionID, WTF::CompletionHandler<void ()>&&) 8 0x1167344c1 void IPC::callMemberFunctionImpl<WebKit::NetworkProcessProxy, void (WebKit::NetworkProcessProxy::*)(WebCore::RegistrableDomain&&, PAL::SessionID, WTF::CompletionHandler<void ()>&&), void (), std::__1::tuple<WebCore::RegistrableDomain, PAL::SessionID>, 0ul, 1ul>(WebKit::NetworkProcessProxy*, void (WebKit::NetworkProcessProxy::*)(WebCore::RegistrableDomain&&, PAL::SessionID, WTF::CompletionHandler<void ()>&&), WTF::CompletionHandler<void ()>&&, std::__1::tuple<WebCore::RegistrableDomain, PAL::SessionID>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul>) 9 0x116732ea5 void IPC::callMemberFunction<WebKit::NetworkProcessProxy, void (WebKit::NetworkProcessProxy::*)(WebCore::RegistrableDomain&&, PAL::SessionID, WTF::CompletionHandler<void ()>&&), void (), std::__1::tuple<WebCore::RegistrableDomain, PAL::SessionID>, std::__1::integer_sequence<unsigned long, 0ul, 1ul> >(std::__1::tuple<WebCore::RegistrableDomain, PAL::SessionID>&&, WTF::CompletionHandler<void ()>&&, WebKit::NetworkProcessProxy*, void (WebKit::NetworkProcessProxy::*)(WebCore::RegistrableDomain&&, PAL::SessionID, WTF::CompletionHandler<void ()>&&)) 10 0x11670d9e9 void IPC::handleMessageAsync<Messages::NetworkProcessProxy::EstablishWorkerContextConnectionToNetworkProcess, WebKit::NetworkProcessProxy, void (WebKit::NetworkProcessProxy::*)(WebCore::RegistrableDomain&&, PAL::SessionID, WTF::CompletionHandler<void ()>&&)>(IPC::Connection&, IPC::Decoder&, WebKit::NetworkProcessProxy*, void (WebKit::NetworkProcessProxy::*)(WebCore::RegistrableDomain&&, PAL::SessionID, WTF::CompletionHandler<void ()>&&)) 11 0x11670c133 WebKit::NetworkProcessProxy::didReceiveNetworkProcessProxyMessage(IPC::Connection&, IPC::Decoder&) 12 0x1176e81b2 WebKit::NetworkProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 13 0x1164eb15f IPC::Connection::dispatchMessage(IPC::Decoder&) 14 0x1164eba90 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 15 0x1164ec120 IPC::Connection::dispatchOneIncomingMessage() 16 0x11650b1d8 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_7::operator()() 17 0x11650b0ee WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_7, void>::call() 18 0x10b5353c2 WTF::Function<void ()>::operator()() const 19 0x10b5b3e45 WTF::RunLoop::performWork() 20 0x10b5b84d1 WTF::RunLoop::performWork(void*) 21 0x7fff354afd52 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 22 0x7fff354afcf1 __CFRunLoopDoSource0 23 0x7fff354afb0b __CFRunLoopDoSources0 24 0x7fff354ae83a __CFRunLoopRun 25 0x7fff354ade3e CFRunLoopRunSpecific 26 0x7fff37b491c8 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 27 0x10b1f9ece WTR::TestController::platformRunUntil(bool&, WTF::Seconds) 28 0x10b1b659f WTR::TestController::runUntil(bool&, WTF::Seconds) 29 0x10b1ff912 WTR::TestInvocation::invoke() 30 0x10b1c03d2 WTR::TestController::runTest(char const*) 31 0x10b1c0e66 WTR::TestController::runTestingServerLoop()
Attachments
Patch (1.31 KB, patch)
2020-10-08 17:53 PDT, Alex Christensen
no flags
Ryan Haddad
Comment 1 2020-10-08 17:21:45 PDT
Radar WebKit Bug Importer
Comment 2 2020-10-08 17:22:05 PDT
Alex Christensen
Comment 3 2020-10-08 17:24:52 PDT
Will fix ASAP.
Alex Christensen
Comment 4 2020-10-08 17:53:25 PDT
Alex Christensen
Comment 5 2020-10-08 19:32:16 PDT
Comment on attachment 410897 [details] Patch Committed http://trac.webkit.org/r268243 I'll watch the bots. My http/wpt/service-workers/Mac/throttleable.https.html is failing locally after this, and I'm not sure if it's related.
Alex Christensen
Comment 6 2020-10-09 08:32:47 PDT
Looks like it's back to how it was before r267763. http/wpt/service-workers/third-party-cookie.html times out occasionally on iOS but it did before. http/wpt/service-workers/Mac/throttleable.https.html has failed once since then and passed about 100 times. They both still need some work, but r267763 regression is gone.
Note You need to log in before you can comment on or make changes to this bug.