REGRESSION (r267763): SHOULD NEVER BE REACHED in WebKit::contentRuleListsFromIdentifier https://bugs.webkit.org/show_bug.cgi?id=217499

There was an invalid assertion. NBD.

* UIProcess/WebProcessProxy.cpp:
(WebKit::contentRuleListsFromIdentifier):



Canonical link: https://commits.webkit.org/230276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268243 268f45cc-cd09-0410-ab3c-d52691b4dbfc